--- a/Technical_Test_Descartes.ipynb
+++ b/Technical_Test_Descartes.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "# Data Scientist Technical Test\n",
         "\n",
-        "The purpose of this data scienct project is to write a functional and structured code in python using a jupyter notebook, to make a prediction on the provided dataset. The dataset is based on a Kaggle competition (https://www.kaggle.com/c/auto-insurance-fall-2017). It contains insurance claim statistics on the customers.\n",
+        "The purpose of this data science project is to write a functional and structured code in python using a jupyter notebook, to make a prediction on the provided dataset. The dataset is based on a Kaggle competition (https://www.kaggle.com/c/auto-insurance-fall-2017). It contains insurance claim statistics on the customers.\n",
         "\n",
         "The target to be predicted is `TARGET_FLAG`. \n",
         "The provided dataset is divided in two files: one for the training, design and tuning of models `train_auto.csv` (with targets), and one for the final predictions `test_auto.csv` (with no target provided).\n",
@@ -132,7 +132,7 @@
         "id": "5A3TyvT8bHq2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 406
         },
         "outputId": "bf609d19-99c6-4d5c-f4ee-53f2ced52b5d"
       },
@@ -1565,7 +1565,7 @@
       "cell_type": "markdown",
       "source": [
         "We are now converting to apply different transformations for the different type of input features:\n",
-        "- For the numerical attributes, we replace the `NaN` or missing values by a reasonnable value, here the median of the column. We also scale these values using a `StandardScaler` object.\n",
+        "- For the numerical attributes, we replace the `NaN` or missing values by a reasonnable value, here the mean of the column. We also scale these values using a `StandardScaler` object.\n",
         "- For the binary ones, we can convert the values to 0 and 1. \n",
         "- For the categorial attributes with more than two classes, we don't want to create an effect of distance between them. Therefore, we are going to use 'One Hot Encoding'.\n"
       ],
